<resources>
    <string name="tips">温馨提示</string>
    <string name="tips_detail">是否切换居民?</string>
    <string name="pls_check_idcard">请刷身份证或健康卡!</string>
    <string name="change_way_for_select">手动选择用户</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="no_test">未测</string>
    <string name="new_register">新用户注册</string>
    <string name="new_username">输入医生名:</string>
    <string name="pls_password">请输入密码:</string>
    <string name="pls_password_agin">请确认密码:</string>
    <string name="test_user">admin</string>
    <string name="test_password">0517</string>
    <string name="test_common_password">0518</string>
    <string name="new_born_followup">新生儿随访</string>
    <string name="name_no_special">姓名不允许出现特殊字符</string>
    <string name="children_check_followup">儿童检查随访</string>
    <string name="query_failure">查询更新失败，请检查与服务器连接是否正常</string>
    <string name="newborn_followup_exist">新生儿随访记录已存在，不需要重复新建</string>
    <string name="holergasia_has_checked_in">该精神病患者已经登记，不需要重复登记</string>
    <string name="holergasia_check_in">该患者未进行重性精神疾病信息登记，请先进行登记</string>
    <string name="patients_into_success">居民录入成功!</string>
    <string name="verify_patients_into_success">确认录入该居民?</string>
    <string name="name_cannot_empty">姓名不能为空!</string>
    <string name="name_input_error">姓名输入有误，请重新输入!</string>
    <string name="idcard_not_empty">身份证/会员卡不能同时为空!</string>
    <string name="card_not_empty">身份证不能为空</string>
    <string name="input_18_idcard">请输入18位身份证!</string>
    <string name="idcard_error">身份证号码有误，请重新输入</string>
    <string name="id_error_infoexist">身份证号码已存在，请重新输入！</string>
    <string name="weight_illegal">体重输入的数值不合法，小数点不能出现在开头和末尾</string>
    <string name="weight_error">体重数值不正确，应在0~250kg范围之内</string>
    <string name="height_illegal">身高输入的数值不合法，小数点不能出现在开头和末尾</string>
    <string name="height_erro">身高数值不正确，应在0~300cm范围之内</string>
    <string name="ecg">心电</string>
    <string name="spo2">血氧</string>
    <string name="blood">血糖</string>
    <string name="hemameba">白细胞</string>
    <string name="purine_trione">尿酸</string>
    <string name="blood_three">血液三项</string>
    <string name="confirm_print">确认打印机服务端地址?</string>
    <string name="confirm_efficacious_ip">请输入有效的IP地址</string>
    <string name="confirm_efficacious_doman">请输入有效的域名地址</string>
    <string name="software_update_address_not_empty">软件更新地址不能为空</string>
    <string name="server_ip_address_not_empty">服务器IP地址不能为空</string>
    <string name="cloud_ip_address_not_empty">云平台IP地址不能为空</string>
    <string name="confirm_efficacious_updata">确认修改软件更新地址?</string>
    <string name="confirm_device_config">确认修改设备配置?</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="kazak">哈萨克语</string>
    <string name="uygur">维吾尔语</string>
    <string name="delete_patient">删除用户</string>
    <string name="delete_cancel">取消删除</string>
    <string name="patients_add">请先添加用户!</string>
    <string name="delete_al_patient">是否删除所有选中的用户？</string>
    <string name="exit_select_patients">是否确认退出当前用户？</string>
    <string name="ip_cannot_empty">IP地址不能为空</string>
    <string name="instrumentation_failure">IP地址不能为空</string>
    <string name="confirm_modify_user">确认修改居民“</string>
    <string name="data_question">”的数据？</string>
    <string name="currently_modify_patient">当前正在修改用户:</string>
    <string name="confirm_delete_user">确认删除用户“</string>
    <string name="maternal_health_management">孕产妇健康管理</string>
    <string name="holergasia_health_management">重性精神病管理</string>
    <string name="health_education_activity">健康教育活动</string>
    <string name="vaccination_services">预防接种服务</string>
    <string name="health_supervision_service">卫生监督服务</string>
    <string name="date_follow_noempty">随访日期不能为空</string>
    <string name="next_date_follow_noempty">下次随访日期不能为空</string>
    <string name="saving_waiting">正在保存...</string>
    <string name="saving_succeed">保存成功</string>
    <string name="saving_failed">保存失败</string>
    <string name="saving_visit_succeed">保存随访记录成功!</string>
    <string name="saving_visit_failure">保存随访记录失败!</string>
    <string name="visit_this_date_noempty">本次访视日期不能为空</string>
    <string name="visit_next_date_noempty">下次访视日期不能为空</string>
    <string name="failure_load_medical">加载体检信息失败:</string>
    <string name="failure_load_visit">加载随访记录失败:</string>
    <string name="have_table_data">已有此日期的数据，请修改日期再次保存！</string>
    <string name="initializes_abnormal_data">初始化数据时出现异常!</string>
    <string name="day_one_data">一天只能创建一条评估记录</string>
    <string name="health_supervision_report">卫生监督协管信息报告</string>
    <string name="health_supervision">卫生监督协管巡查</string>
    <string name="elderly_health_management">老年人中医药健康管理</string>
    <string name="selected">请选择</string>
    <string name="residents_health_measurement">请您为该居民进行健康测量</string>
    <string name="neonatal_family_visit">新生儿家庭访视</string>
    <string name="health_check_onesix">0~6岁儿童健康检查</string>
    <string name="select_type">请选择随访类型</string>
    <string name="prenatal_follow_one">第一次产前随访</string>
    <string name="prenatal_follow_two_five">第2～5次产前随访</string>
    <string name="saving_prenatal_follow_two_five">保存第2~5次产前随访成功</string>
    <string name="postpartum_visit">产后访视</string>
    <string name="postpartum_visit_forty_two">产后42天访视</string>
    <string name="personal_information_register">重性精神疾病患者个人信息登记</string>
    <string name="personal_information_visit">重性精神疾病患者随访服务</string>
    <string name="select_table_type">请选择填表类型</string>
    <string name="patient_already_register">该居民已经登记了预防接种信息，不需要重复登记
    </string>
    <string name="discharge_date_noempty">未出院日期不能为空</string>
    <string name="table_date_noempty">填表日期不能为空</string>
    <string name="query_noempty">未查询到结果</string>
    <string name="date_format_error">解析日期格式错误</string>
    <string name="personal_register">重型精神病患者登记</string>
    <string name="personal_visit_records">重性精神病患者随访记录</string>
    <string name="loading_form">正在加载表单...</string>
    <string name="saving_postpartum_visit_forty_two">保存产后42天访视服务成功</string>
    <string name="saving_postpartum_visit">保存产后访视服务成功</string>
    <string name="lase_date_menstruation_error">末次月经日期格式不对，请输入正确的日期格式</string>
    <string name="maternal_date_error">孕产期日期格式不对，请输入正确的日期格式</string>
    <string name="existing_follow_records">已存在随访记录</string>
    <string name="food_safety">食品安全</string>
    <string name="drinking_water_safety">饮用水安全</string>
    <string name="occupational_hazard">职业病危害</string>
    <string name="school_hygiene">学校卫生</string>
    <string name="illegal_practice_medicine">非法行医（采供血）</string>
    <string name="activity_time_noempty">活动时间不能为空</string>
    <string name="ventricular_tachycardia">室速</string>
    <string name="room_slowly">室缓</string>
    <string name="heart_rate_high">心率过高！</string>
    <string name="heart_rate_low">心率过低！</string>
    <string name="blood_sugar">血糖(mmol/L)</string>
    <string name="purine_trione_mmol">尿酸(mmol/L)</string>
    <string name="td_mmol">总胆固醇(mmol/L)</string>
    <string name="hemoglobin">血红蛋白</string>
    <string name="red_blood">红细胞压积值</string>
    <string name="white_blood_cell">白细胞(10^9/L)</string>
    <string name="heart_rate">心率(bpm)</string>
    <string name="animal_heat">体温(℃)</string>
    <string name="systolic_pressure">收缩压(mmHg)</string>
    <string name="diastolic_pressure">舒张压(mmHg)</string>
    <string name="mean_blood_pressure">平均压(mmHg)</string>
    <string name="pulse_rate">脉率(bpm)</string>
    <string name="blood_oxygen">血氧(%)</string>
    <string name="check_update_soft">检查软件更新</string>
    <string name="input_device_num">点击录入</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="modify_server_IP_address">确认修改服务器IP地址?</string>
    <string name="modify_software_address">确认修改软件更新地址?</string>
    <string name="modify_server_address">确认修改服务器地址?</string>
    <string name="modify_cloud_address">确认修改云平台地址?</string>
    <string name="connection_succeed">连接成功!</string>
    <string name="connection_failed">连接失败!</string>
    <string name="confirm_konsung_server">确认康尚外网服务器IP地址?</string>
    <string name="record_download_success">健康档案下载成功！</string>
    <string name="record_download_failed">健康档案下载失败！</string>
    <string name="cancel_modify">取消修改</string>
    <string name="data_uploading_print">正在上传所有数据，请稍候打印....</string>
    <string name="dispose_print_data">正在处理中，请耐心等待打印作业完成....</string>
    <string name="dispose_print_usb">打印机未连接，请连接打印机！</string>
    <string name="dispose_print_port">打印失败，请检测USB连接！</string>
    <string name="dispose_print_again">请允许应用访问Usb设备！</string>
    <string name="default_value">-?-</string>
    <string name="save">保存</string>
    <string-array name="device_config">
        <item>KSM5</item>
        <item>EmpUi</item>
        <item>GA7</item>
        <item>IDA007</item>
        <item>HTD8819</item>
        <item>TH809</item>
        <item>BeneCheckGlu</item>
        <item>BeneCheck</item>
        <item>OGM111</item>
        <item>URIT31</item>
        <item>MissionU120</item>
        <item>HemoCueWBC</item>
        <item>HemoCueHb</item>
        <item>URIT12</item>
        <item>MissionHb</item>
        <item>CCM111</item>
        <item>BeiWen((usb转串口))</item>
        <item>UNT5000</item>
        <item>BeiWen(指定串口)</item>
        <item>EA-12</item>
    </string-array>
    <string name="ksm5">KSM5</string>
    <string name="empui">EmpUi</string>
    <string name="ga7">GA7</string>
    <string name="ida007">IDA007</string>
    <string name="htd8819">HTD8819</string>
    <string name="th809">TH809</string>
    <string name="bene_check_glu">BeneCheckGlu</string>
    <string name="bene_check">BeneCheck</string>
    <string name="ogm111">OGM111</string>
    <string name="urit31">URIT-31</string>
    <string name="mission_u120">Mission U120</string>
    <string name="hemo_cue_wbc">HemoCue WBC</string>
    <string name="hemo_cue_hb">HemoCue Hb</string>
    <string name="urit12">URIT-12</string>
    <string name="mission_hb">Mission Hb</string>
    <string name="beiwen1">BeiWen(usb转串口)</string>
    <string name="beiwen2">BeiWen(指定串口)</string>
    <string-array name="param_config">
        <item>心电</item>
        <item>血氧</item>
        <item>血压</item>
        <item>体温</item>
        <item>血糖、尿酸、总胆固醇</item>
        <item>尿常规11项</item>
        <item>尿常规14项</item>
        <item>血红蛋白</item>
        <item>血脂四项</item>
        <item>糖化血红蛋白</item>
        <item>BMI</item>
        <item>白细胞</item>
    </string-array>
    <string name="param_ecg">心电</string>
    <string name="param_spo2">血氧</string>
    <string name="pram_blood_pressure">血压</string>
    <string name="param_temp">体温</string>
    <string name="param_more">血糖、尿酸、总胆固醇</string>
    <string name="param_urine_11">尿常规11项</string>
    <string name="param_urine_14">尿常规14项</string>
    <string name="param_blogin">血红蛋白</string>
    <string name="param_sugar_blogin">糖化血红蛋白</string>
    <string name="param_blood_4">血脂四项</string>
    <string name="param_white">白细胞</string>
    <string name="param_bmi">BMI</string>
    <string name="param_blood_fat_ccm">CCM111</string>
    <string name="x_project_name">项目名称</string>
    <string name="measure_result">检查结果</string>
    <string name="x_measure_unit">单位</string>
    <string name="x_preference_value">参考值</string>
    <string name="x_tip">提示</string>
    <string name="bo">血氧</string>
    <string name="x_bo">血氧</string>
    <string name="_97">"-?-"</string>
    <string name="x_measure_unit_percent">%</string>
    <string name="x_measure_bo_reference">94-100</string>
    <string name="pr">脉率</string>
    <string name="x_measure_unit_bpm">bpm</string>
    <string name="x_temperature">体温</string>
    <string name="x_measure_unit_celsius">℃</string>
    <string name="x_measure_temperature_reference">36.2-37.2</string>
    <string name="title_ecg">心率</string>
    <string name="hr_reference_range">60-100</string>
    <string name="ea_12">EA-12</string>
    <string name="unt5000">UNT5000</string>
</resources>