<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f000000"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_content"
        android:background="@drawable/bg_ip_dialog"
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="wrap_content"

        android:paddingLeft="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tv_title"
            android:layout_marginTop="20dp"
            android:textColor="#333"
            android:textSize="18sp"
            android:text="@string/param_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_ecg"
                style="@style/MyCheckBox"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:tag="-1"
                android:text="@string/param_ecg"
                android:clickable="false"
                android:checked="true"
                />
            <CheckBox
                android:tag="5"
                android:id="@+id/cb_uri14"
                style="@style/MyCheckBox"
                android:text="@string/param_urine_14"
                android:layout_width="134dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:tag="8"
                android:id="@+id/cb_sugar_blood"
                style="@style/MyCheckBox"
                android:text="@string/param_sugar_blogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_spo2"
                style="@style/MyCheckBox"
                android:text="@string/param_spo2"
                android:tag="0"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:checked="true"
                />
            <CheckBox
                android:tag="4"
                android:id="@+id/cb_uri11"
                style="@style/MyCheckBox"
                android:text="@string/param_urine_11"
                android:layout_width="134dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:tag="9"
                android:id="@+id/cb_bmi"
                style="@style/MyCheckBox"
                android:text="@string/param_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:tag="1"
                android:id="@+id/cb_blood_pressure"
                style="@style/MyCheckBox"
                android:text="@string/pram_blood_pressure"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:checked="true"
                />
            <CheckBox
                android:tag="6"
                android:id="@+id/cb_blogin"
                style="@style/MyCheckBox"
                android:text="@string/param_blogin"
                android:layout_width="134dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:tag="10"
                android:id="@+id/cb_wbc"
                style="@style/MyCheckBox"
                android:text="@string/param_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:tag="2"
                android:id="@+id/cb_temperature"
                style="@style/MyCheckBox"
                android:text="@string/param_temp"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:tag="7"
                android:id="@+id/cb_blood_fat"
                style="@style/MyCheckBox"
                android:text="@string/param_blood_4"
                android:layout_width="134dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <CheckBox
            android:tag="3"
            android:id="@+id/cb_more"
            android:layout_marginTop="24dp"
            style="@style/MyCheckBox"
            android:text="@string/param_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/ip_et_text"
                android:background="@drawable/confirm_save_selector"
                android:layout_width="52dp"
                android:layout_height="32dp" />
            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_ok"
                android:gravity="center"
                android:text="@string/save"
                android:textSize="15sp"
                android:textColor="@color/main_app_color"
                android:background="@drawable/confirm_save_selector"
                android:layout_width="52dp"
                android:layout_height="32dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
